[package]
name = "safe-push"
version = "0.1.0"
edition = "2021"
authors = ["CHHemant"]
description = "A pre-commit guardian that sanitizes secrets and PII before you push."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
colored = "2.1"

